<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    >



    <ImageView
        android:id="@+id/newToDoEntrBackground1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/mesh"
        />


    <TextView
        android:id="@+id/newToDoEntryHeader"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@drawable/shadow_gradient"
        android:elevation="4dp"
        android:outlineProvider="background"
        android:paddingStart="8dp"
        android:paddingTop="12dp"
        android:paddingEnd="8dp"
        android:paddingBottom="12dp"
        android:shadowColor="@color/color10TransparentBlack"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/t_welcome"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/color90TransparentWhite"
        android:textSize="18sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/t_title"
        android:inputType="textAutoComplete"
        android:padding="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newToDoEntryHeader" />

    <ImageView
        android:id="@+id/imagePreview"
        android:layout_width="105dp"
        android:layout_height="108dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_title"
        android:src="@drawable/photos_stackadd"
        android:padding="16dp"
        android:elevation="4dp"
        />


    <EditText
        android:id="@+id/edit_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/t_description"
        android:inputType="textMultiLine"
        android:lines="16"
        android:minLines="6"
        android:gravity="top|left"
        android:padding="8dp"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagePreview" />


    <Button
        style="@style/buttonStyle"
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/t_save"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_category"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:hint="@string/t_category"
        android:inputType="textAutoComplete"
        android:padding="8dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/imagePreview"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_title" />

    <EditText
        android:id="@+id/edit_additionals"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/t_additionals2"
        android:inputType="textAutoComplete"
        android:padding="8dp"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/edit_description"
        app:layout_constraintEnd_toStartOf="@+id/imagePreview"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_category"
        app:layout_constraintVertical_bias="0.833" />


</androidx.constraintlayout.widget.ConstraintLayout>